parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> group
Rule 4     statement -> take
Rule 5     statement -> take_wr
Rule 6     statement -> size
Rule 7     statement -> given
Rule 8     statement -> union
Rule 9     statement -> observe
Rule 10    statement -> probability
Rule 11    statement -> property
Rule 12    term -> num
Rule 13    term -> LABEL
Rule 14    term -> LABEL LPAR t_list RPAR
Rule 15    num -> INT
Rule 16    num -> FLOAT
Rule 17    t_list -> term
Rule 18    t_list -> term COMMA t_list
Rule 19    group -> GROUP LPAR LABEL RPAR STOP
Rule 20    group -> GROUP LPAR rest RPAR STOP
Rule 21    size -> SIZE LPAR LABEL COMMA INT RPAR STOP
Rule 22    rest -> REST LPAR LABEL RPAR
Rule 23    take -> TAKE LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
Rule 24    take -> TAKE LPAR rest COMMA LABEL COMMA INT RPAR STOP
Rule 25    take_wr -> TAKE_WR LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
Rule 26    take_wr -> TAKE_WR LPAR rest COMMA LABEL COMMA INT RPAR STOP
Rule 27    given -> GIVEN LPAR how_many RPAR STOP
Rule 28    property -> PROPERTY LPAR term COMMA LSPAR t_list RSPAR RPAR STOP
Rule 29    proposition -> term
Rule 30    proposition -> AND LPAR logic COMMA logic RPAR
Rule 31    proposition -> OR LPAR logic COMMA logic RPAR
Rule 32    proposition -> NOT LPAR logic RPAR
Rule 33    proposition -> aggcmp
Rule 34    proposition -> ALLSAME LPAR LABEL COMMA term RPAR
Rule 35    proposition -> ALLDIFF LPAR LABEL COMMA term RPAR
Rule 36    how_many -> ALL LPAR LABEL COMMA proposition RPAR
Rule 37    how_many -> NONE LPAR LABEL COMMA proposition RPAR
Rule 38    how_many -> SOME LPAR LABEL COMMA proposition RPAR
Rule 39    how_many -> NTH LPAR INT COMMA LABEL COMMA proposition RPAR
Rule 40    how_many -> ATLEAST LPAR INT COMMA LABEL COMMA proposition RPAR
Rule 41    how_many -> ATMOST LPAR INT COMMA LABEL COMMA proposition RPAR
Rule 42    how_many -> exactly
Rule 43    logic -> proposition
Rule 44    logic -> how_many
Rule 45    op -> SUM
Rule 46    op -> MUL
Rule 47    op -> MIN
Rule 48    op -> MAX
Rule 49    op -> AVERAGE
Rule 50    comp -> EQUALS SEMI EQUALS
Rule 51    comp -> LT
Rule 52    comp -> GT
Rule 53    comp -> GT EQUALS
Rule 54    comp -> EQUALS LT
Rule 55    comp -> EQUALS SLASH EQUALS
Rule 56    rel -> REL LPAR num DIVIDE num COMMA t_list RPAR
Rule 57    rel -> REL LPAR FLOAT COMMA t_list RPAR
Rule 58    short -> EVEN
Rule 59    short -> ODD
Rule 60    short -> PRIME
Rule 61    exactly -> EXACTLY LPAR rel COMMA LABEL COMMA proposition RPAR
Rule 62    exactly -> EXACTLY LPAR INT COMMA LABEL COMMA proposition RPAR
Rule 63    union -> UNION LPAR LABEL COMMA LSPAR t_list RSPAR RPAR STOP
Rule 64    aggcmp -> AGGCMP LPAR LABEL COMMA term COMMA op COMMA comp COMMA INT RPAR
Rule 65    aggcmp -> AGGCMP LPAR LABEL COMMA term COMMA op COMMA short RPAR
Rule 66    probability -> PROBABILITY LPAR logic RPAR STOP
Rule 67    observe -> OBSERVE LPAR logic RPAR STOP

Terminals, with rules where they appear

AGGCMP               : 64 65
ALL                  : 36
ALLDIFF              : 35
ALLSAME              : 34
AND                  : 30
ATLEAST              : 40
ATMOST               : 41
AVERAGE              : 49
COMMA                : 18 21 23 23 24 24 25 25 26 26 28 30 31 34 35 36 37 38 39 39 40 40 41 41 56 57 61 61 62 62 63 64 64 64 64 65 65 65
DIVIDE               : 56
EQUALS               : 50 50 53 54 55 55
EVEN                 : 58
EXACTLY              : 61 62
FLOAT                : 16 57
GIVEN                : 27
GROUP                : 19 20
GT                   : 52 53
INT                  : 15 21 23 24 25 26 39 40 41 62 64
LABEL                : 13 14 19 21 22 23 23 24 25 25 26 34 35 36 37 38 39 40 41 61 62 63 64 65
LPAR                 : 14 19 20 21 22 23 24 25 26 27 28 30 31 32 34 35 36 37 38 39 40 41 56 57 61 62 63 64 65 66 67
LSPAR                : 28 63
LT                   : 51 54
MAX                  : 48
MIN                  : 47
MUL                  : 46
NONE                 : 37
NOT                  : 32
NTH                  : 39
OBSERVE              : 67
ODD                  : 59
OR                   : 31
PRIME                : 60
PROBABILITY          : 66
PROPERTY             : 28
REL                  : 56 57
REST                 : 22
RPAR                 : 14 19 20 21 22 23 24 25 26 27 28 30 31 32 34 35 36 37 38 39 40 41 56 57 61 62 63 64 65 66 67
RSPAR                : 28 63
SEMI                 : 50
SIZE                 : 21
SLASH                : 55
SOME                 : 38
STOP                 : 19 20 21 23 24 25 26 27 28 63 66 67
SUM                  : 45
TAKE                 : 23 24
TAKE_WR              : 25 26
UNION                : 63
error                : 

Nonterminals, with rules where they appear

aggcmp               : 33
comp                 : 64
exactly              : 42
given                : 7
group                : 3
how_many             : 27 44
logic                : 30 30 31 31 32 66 67
num                  : 12 56 56
observe              : 9
op                   : 64 65
probability          : 10
program              : 2 0
property             : 11
proposition          : 36 37 38 39 40 41 43 61 62
rel                  : 61
rest                 : 20 24 26
short                : 65
size                 : 6
statement            : 1 2
t_list               : 14 18 28 56 57 63
take                 : 4
take_wr              : 5
term                 : 17 18 28 29 34 35 64 65
union                : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . group
    (4) statement -> . take
    (5) statement -> . take_wr
    (6) statement -> . size
    (7) statement -> . given
    (8) statement -> . union
    (9) statement -> . observe
    (10) statement -> . probability
    (11) statement -> . property
    (19) group -> . GROUP LPAR LABEL RPAR STOP
    (20) group -> . GROUP LPAR rest RPAR STOP
    (23) take -> . TAKE LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (24) take -> . TAKE LPAR rest COMMA LABEL COMMA INT RPAR STOP
    (25) take_wr -> . TAKE_WR LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (26) take_wr -> . TAKE_WR LPAR rest COMMA LABEL COMMA INT RPAR STOP
    (21) size -> . SIZE LPAR LABEL COMMA INT RPAR STOP
    (27) given -> . GIVEN LPAR how_many RPAR STOP
    (63) union -> . UNION LPAR LABEL COMMA LSPAR t_list RSPAR RPAR STOP
    (67) observe -> . OBSERVE LPAR logic RPAR STOP
    (66) probability -> . PROBABILITY LPAR logic RPAR STOP
    (28) property -> . PROPERTY LPAR term COMMA LSPAR t_list RSPAR RPAR STOP

    GROUP           shift and go to state 12
    TAKE            shift and go to state 13
    TAKE_WR         shift and go to state 14
    SIZE            shift and go to state 15
    GIVEN           shift and go to state 16
    UNION           shift and go to state 17
    OBSERVE         shift and go to state 18
    PROBABILITY     shift and go to state 19
    PROPERTY        shift and go to state 20

    program                        shift and go to state 1
    statement                      shift and go to state 2
    group                          shift and go to state 3
    take                           shift and go to state 4
    take_wr                        shift and go to state 5
    size                           shift and go to state 6
    given                          shift and go to state 7
    union                          shift and go to state 8
    observe                        shift and go to state 9
    probability                    shift and go to state 10
    property                       shift and go to state 11

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . group
    (4) statement -> . take
    (5) statement -> . take_wr
    (6) statement -> . size
    (7) statement -> . given
    (8) statement -> . union
    (9) statement -> . observe
    (10) statement -> . probability
    (11) statement -> . property
    (19) group -> . GROUP LPAR LABEL RPAR STOP
    (20) group -> . GROUP LPAR rest RPAR STOP
    (23) take -> . TAKE LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (24) take -> . TAKE LPAR rest COMMA LABEL COMMA INT RPAR STOP
    (25) take_wr -> . TAKE_WR LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (26) take_wr -> . TAKE_WR LPAR rest COMMA LABEL COMMA INT RPAR STOP
    (21) size -> . SIZE LPAR LABEL COMMA INT RPAR STOP
    (27) given -> . GIVEN LPAR how_many RPAR STOP
    (63) union -> . UNION LPAR LABEL COMMA LSPAR t_list RSPAR RPAR STOP
    (67) observe -> . OBSERVE LPAR logic RPAR STOP
    (66) probability -> . PROBABILITY LPAR logic RPAR STOP
    (28) property -> . PROPERTY LPAR term COMMA LSPAR t_list RSPAR RPAR STOP

    $end            reduce using rule 1 (program -> statement .)
    GROUP           shift and go to state 12
    TAKE            shift and go to state 13
    TAKE_WR         shift and go to state 14
    SIZE            shift and go to state 15
    GIVEN           shift and go to state 16
    UNION           shift and go to state 17
    OBSERVE         shift and go to state 18
    PROBABILITY     shift and go to state 19
    PROPERTY        shift and go to state 20

    statement                      shift and go to state 2
    program                        shift and go to state 21
    group                          shift and go to state 3
    take                           shift and go to state 4
    take_wr                        shift and go to state 5
    size                           shift and go to state 6
    given                          shift and go to state 7
    union                          shift and go to state 8
    observe                        shift and go to state 9
    probability                    shift and go to state 10
    property                       shift and go to state 11

state 3

    (3) statement -> group .

    GROUP           reduce using rule 3 (statement -> group .)
    TAKE            reduce using rule 3 (statement -> group .)
    TAKE_WR         reduce using rule 3 (statement -> group .)
    SIZE            reduce using rule 3 (statement -> group .)
    GIVEN           reduce using rule 3 (statement -> group .)
    UNION           reduce using rule 3 (statement -> group .)
    OBSERVE         reduce using rule 3 (statement -> group .)
    PROBABILITY     reduce using rule 3 (statement -> group .)
    PROPERTY        reduce using rule 3 (statement -> group .)
    $end            reduce using rule 3 (statement -> group .)


state 4

    (4) statement -> take .

    GROUP           reduce using rule 4 (statement -> take .)
    TAKE            reduce using rule 4 (statement -> take .)
    TAKE_WR         reduce using rule 4 (statement -> take .)
    SIZE            reduce using rule 4 (statement -> take .)
    GIVEN           reduce using rule 4 (statement -> take .)
    UNION           reduce using rule 4 (statement -> take .)
    OBSERVE         reduce using rule 4 (statement -> take .)
    PROBABILITY     reduce using rule 4 (statement -> take .)
    PROPERTY        reduce using rule 4 (statement -> take .)
    $end            reduce using rule 4 (statement -> take .)


state 5

    (5) statement -> take_wr .

    GROUP           reduce using rule 5 (statement -> take_wr .)
    TAKE            reduce using rule 5 (statement -> take_wr .)
    TAKE_WR         reduce using rule 5 (statement -> take_wr .)
    SIZE            reduce using rule 5 (statement -> take_wr .)
    GIVEN           reduce using rule 5 (statement -> take_wr .)
    UNION           reduce using rule 5 (statement -> take_wr .)
    OBSERVE         reduce using rule 5 (statement -> take_wr .)
    PROBABILITY     reduce using rule 5 (statement -> take_wr .)
    PROPERTY        reduce using rule 5 (statement -> take_wr .)
    $end            reduce using rule 5 (statement -> take_wr .)


state 6

    (6) statement -> size .

    GROUP           reduce using rule 6 (statement -> size .)
    TAKE            reduce using rule 6 (statement -> size .)
    TAKE_WR         reduce using rule 6 (statement -> size .)
    SIZE            reduce using rule 6 (statement -> size .)
    GIVEN           reduce using rule 6 (statement -> size .)
    UNION           reduce using rule 6 (statement -> size .)
    OBSERVE         reduce using rule 6 (statement -> size .)
    PROBABILITY     reduce using rule 6 (statement -> size .)
    PROPERTY        reduce using rule 6 (statement -> size .)
    $end            reduce using rule 6 (statement -> size .)


state 7

    (7) statement -> given .

    GROUP           reduce using rule 7 (statement -> given .)
    TAKE            reduce using rule 7 (statement -> given .)
    TAKE_WR         reduce using rule 7 (statement -> given .)
    SIZE            reduce using rule 7 (statement -> given .)
    GIVEN           reduce using rule 7 (statement -> given .)
    UNION           reduce using rule 7 (statement -> given .)
    OBSERVE         reduce using rule 7 (statement -> given .)
    PROBABILITY     reduce using rule 7 (statement -> given .)
    PROPERTY        reduce using rule 7 (statement -> given .)
    $end            reduce using rule 7 (statement -> given .)


state 8

    (8) statement -> union .

    GROUP           reduce using rule 8 (statement -> union .)
    TAKE            reduce using rule 8 (statement -> union .)
    TAKE_WR         reduce using rule 8 (statement -> union .)
    SIZE            reduce using rule 8 (statement -> union .)
    GIVEN           reduce using rule 8 (statement -> union .)
    UNION           reduce using rule 8 (statement -> union .)
    OBSERVE         reduce using rule 8 (statement -> union .)
    PROBABILITY     reduce using rule 8 (statement -> union .)
    PROPERTY        reduce using rule 8 (statement -> union .)
    $end            reduce using rule 8 (statement -> union .)


state 9

    (9) statement -> observe .

    GROUP           reduce using rule 9 (statement -> observe .)
    TAKE            reduce using rule 9 (statement -> observe .)
    TAKE_WR         reduce using rule 9 (statement -> observe .)
    SIZE            reduce using rule 9 (statement -> observe .)
    GIVEN           reduce using rule 9 (statement -> observe .)
    UNION           reduce using rule 9 (statement -> observe .)
    OBSERVE         reduce using rule 9 (statement -> observe .)
    PROBABILITY     reduce using rule 9 (statement -> observe .)
    PROPERTY        reduce using rule 9 (statement -> observe .)
    $end            reduce using rule 9 (statement -> observe .)


state 10

    (10) statement -> probability .

    GROUP           reduce using rule 10 (statement -> probability .)
    TAKE            reduce using rule 10 (statement -> probability .)
    TAKE_WR         reduce using rule 10 (statement -> probability .)
    SIZE            reduce using rule 10 (statement -> probability .)
    GIVEN           reduce using rule 10 (statement -> probability .)
    UNION           reduce using rule 10 (statement -> probability .)
    OBSERVE         reduce using rule 10 (statement -> probability .)
    PROBABILITY     reduce using rule 10 (statement -> probability .)
    PROPERTY        reduce using rule 10 (statement -> probability .)
    $end            reduce using rule 10 (statement -> probability .)


state 11

    (11) statement -> property .

    GROUP           reduce using rule 11 (statement -> property .)
    TAKE            reduce using rule 11 (statement -> property .)
    TAKE_WR         reduce using rule 11 (statement -> property .)
    SIZE            reduce using rule 11 (statement -> property .)
    GIVEN           reduce using rule 11 (statement -> property .)
    UNION           reduce using rule 11 (statement -> property .)
    OBSERVE         reduce using rule 11 (statement -> property .)
    PROBABILITY     reduce using rule 11 (statement -> property .)
    PROPERTY        reduce using rule 11 (statement -> property .)
    $end            reduce using rule 11 (statement -> property .)


state 12

    (19) group -> GROUP . LPAR LABEL RPAR STOP
    (20) group -> GROUP . LPAR rest RPAR STOP

    LPAR            shift and go to state 22


state 13

    (23) take -> TAKE . LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (24) take -> TAKE . LPAR rest COMMA LABEL COMMA INT RPAR STOP

    LPAR            shift and go to state 23


state 14

    (25) take_wr -> TAKE_WR . LPAR LABEL COMMA LABEL COMMA INT RPAR STOP
    (26) take_wr -> TAKE_WR . LPAR rest COMMA LABEL COMMA INT RPAR STOP

    LPAR            shift and go to state 24


state 15

    (21) size -> SIZE . LPAR LABEL COMMA INT RPAR STOP

    LPAR            shift and go to state 25


state 16

    (27) given -> GIVEN . LPAR how_many RPAR STOP

    LPAR            shift and go to state 26


state 17

    (63) union -> UNION . LPAR LABEL COMMA LSPAR t_list RSPAR RPAR STOP

    LPAR            shift and go to state 27


state 18

    (67) observe -> OBSERVE . LPAR logic RPAR STOP

    LPAR            shift and go to state 28


state 19

    (66) probability -> PROBABILITY . LPAR logic RPAR STOP

    LPAR            shift and go to state 29


state 20

    (28) property -> PROPERTY . LPAR term COMMA LSPAR t_list RSPAR RPAR STOP

    LPAR            shift and go to state 30


state 21

    (2) program -> statement program .

    $end            reduce using rule 2 (program -> statement program .)


state 22

    (19) group -> GROUP LPAR . LABEL RPAR STOP
    (20) group -> GROUP LPAR . rest RPAR STOP
    (22) rest -> . REST LPAR LABEL RPAR

    LABEL           shift and go to state 31
    REST            shift and go to state 33

    rest                           shift and go to state 32

state 23

    (23) take -> TAKE LPAR . LABEL COMMA LABEL COMMA INT RPAR STOP
    (24) take -> TAKE LPAR . rest COMMA LABEL COMMA INT RPAR STOP
    (22) rest -> . REST LPAR LABEL RPAR

    LABEL           shift and go to state 34
    REST            shift and go to state 33

    rest                           shift and go to state 35

state 24

    (25) take_wr -> TAKE_WR LPAR . LABEL COMMA LABEL COMMA INT RPAR STOP
    (26) take_wr -> TAKE_WR LPAR . rest COMMA LABEL COMMA INT RPAR STOP
    (22) rest -> . REST LPAR LABEL RPAR

    LABEL           shift and go to state 36
    REST            shift and go to state 33

    rest                           shift and go to state 37

state 25

    (21) size -> SIZE LPAR . LABEL COMMA INT RPAR STOP

    LABEL           shift and go to state 38


state 26

    (27) given -> GIVEN LPAR . how_many RPAR STOP
    (36) how_many -> . ALL LPAR LABEL COMMA proposition RPAR
    (37) how_many -> . NONE LPAR LABEL COMMA proposition RPAR
    (38) how_many -> . SOME LPAR LABEL COMMA proposition RPAR
    (39) how_many -> . NTH LPAR INT COMMA LABEL COMMA proposition RPAR
    (40) how_many -> . ATLEAST LPAR INT COMMA LABEL COMMA proposition RPAR
    (41) how_many -> . ATMOST LPAR INT COMMA LABEL COMMA proposition RPAR
    (42) how_many -> . exactly
    (61) exactly -> . EXACTLY LPAR rel COMMA LABEL COMMA proposition RPAR
    (62) exactly -> . EXACTLY LPAR INT COMMA LABEL COMMA proposition RPAR

    ALL             shift and go to state 40
    NONE            shift and go to state 41
    SOME            shift and go to state 42
    NTH             shift and go to state 43
    ATLEAST         shift and go to state 44
    ATMOST          shift and go to state 45
    EXACTLY         shift and go to state 47

    how_many                       shift and go to state 39
    exactly                        shift and go to state 46

state 27

    (63) union -> UNION LPAR . LABEL COMMA LSPAR t_list RSPAR RPAR STOP

    LABEL           shift and go to state 48


state 28

    (67) observe -> OBSERVE LPAR . logic RPAR STOP
    (43) logic -> . proposition
    (44) logic -> . how_many
    (29) proposition -> . term
    (30) proposition -> . AND LPAR logic COMMA logic RPAR
    (31) proposition -> . OR LPAR logic COMMA logic RPAR
    (32) proposition -> . NOT LPAR logic RPAR
    (33) proposition -> . aggcmp
    (34) proposition -> . ALLSAME LPAR LABEL COMMA term RPAR
    (35) proposition -> . ALLDIFF LPAR LABEL COMMA term RPAR
    (36) how_many -> . ALL LPAR LABEL COMMA proposition RPAR
    (37) how_many -> . NONE LPAR LABEL COMMA proposition RPAR
    (38) how_many -> . SOME LPAR LABEL COMMA proposition RPAR
    (39) how_many -> . NTH LPAR INT COMMA LABEL COMMA proposition RPAR
    (40) how_many -> . ATLEAST LPAR INT COMMA LABEL COMMA proposition RPAR
    (41) how_many -> . ATMOST LPAR INT COMMA LABEL COMMA proposition RPAR
    (42) how_many -> . exactly
    (12) term -> . num
    (13) term -> . LABEL
    (14) term -> . LABEL LPAR t_list RPAR
    (64) aggcmp -> . AGGCMP LPAR LABEL COMMA term COMMA op COMMA comp COMMA INT RPAR
    (65) aggcmp -> . AGGCMP LPAR LABEL COMMA term COMMA op COMMA short RPAR
    (61) exactly -> . EXACTLY LPAR rel COMMA LABEL COMMA proposition RPAR
    (62) exactly -> . EXACTLY LPAR INT COMMA LABEL COMMA proposition RPAR
    (15) num -> . INT
    (16) num -> . FLOAT

    AND             shift and go to state 53
    OR              shift and go to state 54
    NOT             shift and go to state 55
    ALLSAME         shift and go to state 57
    ALLDIFF         shift and go to state 59
    ALL             shift and go to state 40
    NONE            shift and go to state 41
    SOME            shift and go to state 42
    NTH             shift and go to state 43
    ATLEAST         shift and go to state 44
    ATMOST          shift and go to state 45
    LABEL           shift and go to state 58
    AGGCMP          shift and go to state 62
    EXACTLY         shift and go to state 47
    INT             shift and go to state 60
    FLOAT           shift and go to state 63

    logic                          shift and go to state 49
    proposition                    shift and go to state 50
    how_many                       shift and go to state 51
    term                           shift and go to state 52
    aggcmp                         shift and go to state 56
    exactly                        shift and go to state 46
    num                            shift and go to state 61

state 29

    (66) probability -> PROBABILITY LPAR . logic RPAR STOP
    (43) logic -> . proposition
    (44) logic -> . how_many
    (29) proposition -> . term
    (30) proposition -> . AND LPAR logic COMMA logic RPAR
    (31) proposition -> . OR LPAR logic COMMA logic RPAR
    (32) proposition -> . NOT LPAR logic RPAR
    (33) proposition -> . aggcmp
    (34) proposition -> . ALLSAME LPAR LABEL COMMA term RPAR
    (35) proposition -> . ALLDIFF LPAR LABEL COMMA term RPAR
    (36) how_many -> . ALL LPAR LABEL COMMA proposition RPAR
    (37) how_many -> . NONE LPAR LABEL COMMA proposition RPAR
    (38) how_many -> . SOME LPAR LABEL COMMA proposition RPAR
    (39) how_many -> . NTH LPAR INT COMMA LABEL COMMA proposition RPAR
    (40) how_many -> . ATLEAST LPAR INT COMMA LABEL COMMA proposition RPAR
    (41) how_many -> . ATMOST LPAR INT COMMA LABEL COMMA proposition RPAR
    (42) how_many -> . exactly
    (12) term -> . num
    (13) term -> . LABEL
    (14) term -> . LABEL LPAR t_list RPAR
    (64) aggcmp -> . AGGCMP LPAR LABEL COMMA term COMMA op COMMA comp COMMA INT RPAR
    (65) aggcmp -> . AGGCMP LPAR LABEL COMMA term COMMA op COMMA short RPAR
    (61) exactly -> . EXACTLY LPAR rel COMMA LABEL COMMA proposition RPAR
    (62) exactly -> . EXACTLY LPAR INT COMMA LABEL COMMA proposition RPAR
    (15) num -> . INT
    (16) num -> . FLOAT

    AND             shift and go to state 53
    OR              shift and go to state 54
    NOT             shift and go to state 55
    ALLSAME         shift and go to state 57
    ALLDIFF         shift and go to state 59
    ALL             shift and go to state 40
    NONE            shift and go to state 41
    SOME            shift and go to state 42
    NTH             shift and go to state 43
    ATLEAST         shift and go to state 44
    ATMOST          shift and go to state 45
    LABEL           shift and go to state 58
    AGGCMP          shift and go to state 62
    EXACTLY         shift and go to state 47
    INT             shift and go to state 60
    FLOAT           shift and go to state 63

    logic                          shift and go to state 64
    proposition                    shift and go to state 50
    how_many                       shift and go to state 51
    term                           shift and go to state 52
    aggcmp                         shift and go to state 56
    exactly                        shift and go to state 46
    num                            shift and go to state 61

state 30

    (28) property -> PROPERTY LPAR . term COMMA LSPAR t_list RSPAR RPAR STOP
    (12) term -> . num
    (13) term -> . LABEL
    (14) term -> . LABEL LPAR t_list RPAR
    (15) num -> . INT
    (16) num -> . FLOAT

    LABEL           shift and go to state 58
    INT             shift and go to state 60
    FLOAT           shift and go to state 63

    term                           shift and go to state 65
    num                            shift and go to state 61

state 31

    (19) group -> GROUP LPAR LABEL . RPAR STOP

    RPAR            shift and go to state 66


state 32

    (20) group -> GROUP LPAR rest . RPAR STOP

    RPAR            shift and go to state 67


state 33

    (22) rest -> REST . LPAR LABEL RPAR

    LPAR            shift and go to state 68


state 34

    (23) take -> TAKE LPAR LABEL . COMMA LABEL COMMA INT RPAR STOP

    COMMA           shift and go to state 69


state 35

    (24) take -> TAKE LPAR rest . COMMA LABEL COMMA INT RPAR STOP

    COMMA           shift and go to state 70


state 36

    (25) take_wr -> TAKE_WR LPAR LABEL . COMMA LABEL COMMA INT RPAR STOP

    COMMA           shift and go to state 71


state 37

    (26) take_wr -> TAKE_WR LPAR rest . COMMA LABEL COMMA INT RPAR STOP

    COMMA           shift and go to state 72


state 38

    (21) size -> SIZE LPAR LABEL . COMMA INT RPAR STOP

    COMMA           shift and go to state 73


state 39

    (27) given -> GIVEN LPAR how_many . RPAR STOP

    RPAR            shift and go to state 74


state 40

    (36) how_many -> ALL . LPAR LABEL COMMA proposition RPAR

    LPAR            shift and go to state 75


state 41

    (37) how_many -> NONE . LPAR LABEL COMMA proposition RPAR

    LPAR            shift and go to state 76


state 42

    (38) how_many -> SOME . LPAR LABEL COMMA proposition RPAR

    LPAR            shift and go to state 77


state 43

    (39) how_many -> NTH . LPAR INT COMMA LABEL COMMA proposition RPAR

    LPAR            shift and go to state 78


state 44

    (40) how_many -> ATLEAST . LPAR INT COMMA LABEL COMMA proposition RPAR

    LPAR            shift and go to state 79


state 45

    (41) how_many -> ATMOST . LPAR INT COMMA LABEL COMMA proposition RPAR

    LPAR            shift and go to state 80


state 46

    (42) how_many -> exactly .

    RPAR            reduce using rule 42 (how_many -> exactly .)
    COMMA           reduce using rule 42 (how_many -> exactly .)


state 47
